# project-yerb

./: .clang-format  .clang-format-ignore  .clang-tidy  .gitignore  .prettierrc  CMakeLists.txt  Dockerfile  LICENSE.md  Makefile  README.md  convert-audio.sh  docker-compose.yml  format.sh  makefile  template.html
assets/: config.json
config/: config.json
includes/: Action.h  CollisionHelpers.h  Components.h  Config.h  ConfigManager.h  Entity.h  EntityManager.h  EntityTags.h  Game.h  GameEngine.h  MainScene.h  MovementHelpers.h  Scene.h  SpawnHelpers.h  Tags.h  TextHelpers.h  Vec2.h
includes/AssetManagement/: AudioManager.hpp  AudioSampleManager.hpp  AudioSampleQueue.hpp  FontManager.hpp  ImageManager.hpp  SurfaceManager.hpp  TextureManager.hpp
includes/Configuration/: Config.hpp  ConfigManager.hpp  FontManager.hpp
includes/EntityManagement/: Components.hpp  Entity.hpp  EntityManager.hpp  EntityTags.hpp
includes/GameEngine/: Action.hpp  GameEngine.hpp
includes/GameScenes/: HowToPlayScene.hpp  MainScene.hpp  MenuScene.hpp  Scene.hpp  ScoreScene.hpp
includes/GameScenes/HowToPlayScene/: HowToPlayScene.hpp
includes/GameScenes/MainScene/: MainScene.hpp  MainSceneSpawner.hpp
includes/GameScenes/MenuScene/: MenuScene.hpp
includes/GameScenes/ScoreScene/: ScoreScene.hpp
includes/Helpers/: CollisionHelpers.hpp  EntityHelpers.hpp  MathHelpers.hpp  MovementHelpers.hpp  SpawnHelpers.hpp  TextHelpers.hpp  Vec2.hpp
includes/SystemManagement/: AudioManager.hpp  VideoManager.hpp
src/: Action.cpp  CollisionHelpers.cpp  EntityManager.cpp  Game.cpp  GameEngine.cpp  MainScene.cpp  MovementHelpers.cpp  SpawnHelpers.cpp  TextHelpers.cpp  main.cpp
src/AssetManagement/: AudioManager.cpp  AudioSampleQueue.cpp  FontManager.cpp  ImageManager.cpp  SurfaceManager.cpp  TextureManager.cpp  VideoManager.cpp
src/Configuration/: ConfigManager.cpp
src/EntityManagement/: Entity.cpp  EntityManager.cpp
src/GameEngine/: Action.cpp  GameEngine.cpp  MenuScene.cpp
src/GameScenes/: HowToPlayScene.cpp  MainScene.cpp  MenuScene.cpp  ScoreScene.cpp
src/GameScenes/HowToPlayScene/: HowToPlayScene.cpp
src/GameScenes/MainScene/: MainScene.cpp  MainSceneSpawner.cpp
src/GameScenes/MenuScene/: MenuScene.cpp
src/GameScenes/ScoreScene/: ScoreScene.cpp
src/Helpers/: AudioManager.cpp  CollisionHelpers.cpp  EntityHelpers.cpp  MathHelpers.cpp  MovementHelpers.cpp  SpawnHelpers.cpp  TextHelpers.cpp  Vec2.cpp
src/SystemManagement/: AudioManager.cpp  FontManager.cpp  VideoManager.cpp
template/: index.html  script.js  style.css
tests/EntityManagement/: EntityManager.test.cpp
tests/Helpers/: Vec2.cpp  Vec2.test.cpp
